--- a/mandelbulber2/formula/ui/transf_gnarl.ui
+++ b/mandelbulber2/formula/ui/transf_gnarl.ui
@@ -30,6 +30,13 @@
     <number>2</number>
    </property>
    <item>
+    <widget class="QLabel" name="label_180">
+     <property name="text">
+      <string>Gnarl formulas can be run individually or in series</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,0,0,0">
      <item row="1" column="2">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
