--- a/mandelbulber2/formula/ui/transf_gnarl.ui
+++ b/mandelbulber2/formula/ui/transf_gnarl.ui
@@ -34,7 +34,7 @@
      <property name="text">
       <string>Gnarl formulas can be run individually or in series.
 Generally used for 1 iteration
-Gamma angle does no work with 3D</string>
+Gamma angle does not work with 3D option</string>
      </property>
     </widget>
    </item>
