--- a/mandelbulber2/formula/ui/transf_gnarl.ui
+++ b/mandelbulber2/formula/ui/transf_gnarl.ui
@@ -441,7 +441,7 @@ Gamma angle does not work with 3D option</string>
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Can sometimes improve render quality when using analytic DE&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
-         <string>Analytic DE alternate method</string>
+         <string>Analytic DE alternative method</string>
         </property>
        </widget>
       </item>
