Run populateOpenCL and populateUiInformation scripts

--- a/mandelbulber2/formula/ui/transf_abs_add_multi.ui
+++ b/mandelbulber2/formula/ui/transf_abs_add_multi.ui
@@ -678,7 +678,7 @@ z = abs( z + const.A ) - abs( z - const.B ) - ( z * const.C )</string>
         <property name="text">
          <string notr="true">&lt;p&gt;abs Multi - Multiple parameters for abs functions&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/transf_abs_add_multi.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
